--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
         background: #9ca3af; 
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react": "https://aistudiocdn.com/react@18.3.1/index.js",
+    "react/jsx-runtime": "https://aistudiocdn.com/react@18.3.1/jsx-runtime",
+    "react/jsx-dev-runtime": "https://aistudiocdn.com/react@18.3.1/jsx-dev-runtime",
+    "react-dom": "https://aistudiocdn.com/react-dom@18.3.1/index.js",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
+    "vite": "https://aistudiocdn.com/vite@^5.4.1",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^4.3.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
